# article-monitor-classifier

./: README.md  common.py  criteria.md  judge.py  judge_batch.py  links.txt  requirements.txt
article-judge-ai/: .gitignore  README.md  common.py
article-judge-ai/backend/: .env.example  criteria.md  links.txt  pyproject.toml
article-judge-ai/backend/src/article_judge/: __init__.py  api.py  cli.py  config.py  criteria.py  judge.py  models.py  pipeline.py  schemas.py
article-judge-ai/backend/src/article_judge/extractors/: __init__.py  article.py  base.py  registry.py  social.py  youtube.py
article-judge-ai/backend/tests/: test_api.py  test_extractors.py  test_pipeline.py
article-judge-ai/frontend/: app.js  index.html  style.css
